--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -75,6 +75,24 @@ p {
     margin-left: 20px;
 }
 
+/* Class Selector modified to encompass 9 CSS Rules into 3 */
+.section-title {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.section-title img {
+    max-height: 200px;
+}
+
+.section-title h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -82,10 +100,11 @@ p {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
+/* Class Selector modified to encompass 9 CSS Rules into 3 */
 .benefit-lbc {
     margin-bottom: 32px;
     color: #ffffff;
@@ -100,24 +119,6 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.section-title {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.section-title img {
-    max-height: 200px;
-}
-
-.section-title h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .footer {
